bug:fix overflow in department

--- a/styles/homeStyle.css
+++ b/styles/homeStyle.css
@@ -224,7 +224,7 @@ main>.content .second>.content .sub-content {
     position: absolute;
     bottom: 0;
     width: 100%;
-    background-color: gray;
+    background-color: rgb(72, 72, 72);
     color: white;
     padding: 0.3rem;
     box-shadow: 0 -5px 50px 5rem rgb(255, 255, 255);
